Mon Sep 27 18:26:56 2004  Tim Janik  <timj@gtk.org>

	* bsemidireceiver.cc (bse_midi_receiver_voices_pending): don't try to 
	check busy state of NULL voices.

Mon Sep 27 06:38:57 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice.[hc]: removed queue_length field from handle, as it's
	OSS specific. turned req_queue_length field into req_latency_ms, i.e.
	requested latency in milliseconds.

	* bsemididevice-oss.c: added queue_length field to handle. adapt
	to BsePcmDevice.req_latency_ms.

Mon Sep 27 01:09:39 2004  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-oss.c: fixed hardcoded n_channels=2 and a number of buglets.

Sun Sep 26 06:00:46 2004  Tim Janik  <timj@gtk.org>

	* bsedevice.c: fixed logic that collapses multiple 'auto' drivers.
	don't skip auto-list drivers after trying to open 'auto', users
	may have provided special device arguments.

	* bsepcmdevice-oss.c: API updates. added underrun detection and handling.
	added hs - hard-sync option to initiate retriggers on underruns.
	fixed read/write opening mode logic. moved poll timeout calculation
	logic from bsepcmmodule.c here. simplified code by using number of
	frames all over the place. take latency settings into account
	and honour them if the device has been opened readable. ensure block
	writing is always paired with a previous block read to stabelize
	latency queue length.

	* bsepcmdevice.[hc]: added req_block_length field for a tentative
	block_length request and req_queue_length field to request queue
	lengths according to the current latency settings.
	bse_pcm_device_request(): allow latency and block-length requisitions.
	bse_pcm_device_get_mix_freq(): mix frequency accessor.
	bse_pcm_device_get_handle(): require block_length specification.
	bse_pcm_handle_read():
	bse_pcm_handle_write(): removed n_values argument, which is now always
	handle->block_length, as setup from bse_pcm_device_get_handle().
	bse_pcm_handle_status(): removed status() method alltogether.